# Neural_IR_Expansion

./: README.md  bm25_hpo.py  cross_encoder.py  data_handling.ipynb  hello.py  main.py  playground.ipynb  pyproject.toml  utils.py
crossencoder_training/: README.md
data/Dataset/: readme.md
data/Expansions/: expert_user_expansion.txt  novice_user_expansion.txt
data/MyData/: expert_expansion.csv  novice_expansion.csv  test.csv  val.csv
hpo/: hpo_bm25.txt
models/crossencoder_fineTuning/: README.md
results/: hpo_bm25_10.txt  results.txt  results_10.txt  results_10_2.txt
src/: bm25_hpo.py  cross_encoder_FT.py  expansion.py  main.py  utils.py
