[project]
name = "neural-ir-expansion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ir-datasets==0.5.10",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "rank-bm25>=0.2.2",
    "ruff>=0.12.3",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]
