[project]
name = "neural-ir-expansion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "hf-xet>=1.1.5",
    "ipykernel>=6.29.5",
    "ir-datasets==0.5.10",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "optimum[onnxruntime]>=1.26.1",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "rank-bm25>=0.2.2",
    "ruff>=0.12.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers[torch]<4.53.0",
]
